--- a/Kaiserreich Korean Translation/localisation/KR_Lithuania_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Lithuania_l_english.yml
@@ -230,96 +230,96 @@ lithuania.9.t:0 "민족주의자 집회"
 lithuania.9.d:0 "오늘 거리는 리투아니아어로 말하는 애국자들로 가득차 있습니다. 수천명이 넘는 운동가들이 시내를 행진하며 독일의 영향력에서 벗어나도록 요구하고 있습니다. 세계대전에서 국가를 만들기 위해 싸운 영웅들에게 경의를 표하기 위해 지역 묘지를 방문한 후, 작은 폭력이 시작된 도시로 돌아갔습니다. 독일 태생의 몇몇 민간인들이 부상을 당했고, 몇 개의 상점 창문이 깨지고 산산조각이 났지만, 결국 군중들은 흩어졌습니다. 가장 급진적인 참가자들 중 몇 명은 체포되었지만, 이 난장판을 조직하는 사람들에 비하면 별볼일없는 사람들 입니다..."
 lithuania.9.a:0 "끔찍하군!"
 
-lithuania.10.t:0 "Blue Cockades Organise Rally"
-lithuania.10.d:0 "The streets are filled with left-leaning students, workers and sympathisers today, as the Lithuanian syndicalist movement, the Blue Cockades - taking the symbols from the cockades Lithuanian revolutionaries used to wear during the Kosciuzko Uprising in 1794. They call for the eviction of German and capitalist influence in the country and the creation of a Lithuanian syndicalist state. \n\nPolice reports prequent clashes between the blue-clad dissenters and the numerous Lithuanian nationalist gangs, the Iron Wolves. Nobody was killed, but many were sent to hospitals or arrested. However, none of the leaders were found, despite known ties to the Lithuanian Work Federation and the underground Democratic Syndicate of Lithuania."
-lithuania.10.a:0 "Horrible!"
+lithuania.10.t:0 "블루 코카데스 집회 조직"
+lithuania.10.d:0 "리투아니아 생디칼리즘 운동인 블루 코카데스(Blue Cockades)는 1794년 코시우즈코 반란을 일으켰던 리투아니아 혁명가들의 상징을 가져왔습니다. 그들은 국가에서 독일과 자본주의의 영향력 제거와 리투아니아 생디칼리즘 국가의 창설을 요구하고 있습니다. 경찰은 파란색 옷을 입은 반대자들과 수많은 리투아니아 민족주의자 패거리인 강철늑대 사이에서 충돌이 발생했다고 보고하고 있습니다. 아무도 사망하지 않았지만, 많은 사람들이 병원에 이송되거나 체포되었습니다. 그러나 리투아니아 노동 연맹과 지하의 리투아니아 생디칼리스트 민주당의 관계에도 불구하고 지도자 중 누구도 발견되지 않았습니다."
+lithuania.10.a:0 "끔찍하군!"
 
-lithuania.11.t:0 "Election of 1938"
-lithuania.11.d:0 "The early rays of the spring sun have begun to melt down the snow across the country, but the politics of the nation are as unstable as ever. Parades of Nationalist militias and dissenters flood the streets hoping for a victory at the election, and the voter turnout has been the highest since the nation's inception. The Christian-Democrats received blows to their popularity from the events of Black Monday, but nevertheless remain strong, while the Social-Democrats are attempting to rally the working class into voting for them. How will the people decide?"
-lithuania.11.a:0 "The Christian Democrats remain in power."
-lithuania.11.b:0 "Social-Democrats secure a majority."
-lithuania.11.c:0 "A coalition of Nationalist parties led by Voldemaras obtain victory."
+lithuania.11.t:0 "1938년 선거"
+lithuania.11.d:0 "초창기의 봄 햇살이 전국에서 눈을 녹이기 시작했지만, 국가의 정치는 여전히 불안정 합니다. 선거에서의 승리를 기대하며 전국민과 반체제 인사들의 행렬이 거리로 쏟아져 나오고 있으며 투표율은 개표 이후 가장 높았습니다. 기독교 신자들은 검은 월요일 사건으로부터 그들의 인기에 타격을 받았지만, 그럼에도 불구하고 여전히 강력합니다. 반면 사회민주당은 노동자 계급을 모아 그들을 위한 투표를 시도하고 있습니다. 사람들이 어떤 결정을 할까요?"
+lithuania.11.a:0 "기독교 민주당이 정권을 잡았다."
+lithuania.11.b:0 "사회민주당이 과반수를 확보했다."
+lithuania.11.c:0 "볼데마라스가 이끄는 민족주의 정당 연합이 승리를 거두었다."
 
-lithuania.12.t:0 "Change in Political Situation"
-lithuania.12.d:0 "Now that the Constitution of 1920 has been revised and updated, making our country more democratic, the stances of the ruling party have changed, too. We can no longer call ourselves authoritarian, we are not a Prussian Constitutional monarchy anymore. We are a full democracy, just with a figurehead king."
-lithuania.12.a:0 "Good."
+lithuania.12.t:0 "정치상황의 변화"
+lithuania.12.d:0 "1920년 헌법이 개정되고 우리나라가 더욱 민주적이 됨에 따라 여당의 입장도 바뀌었습니다. 우리는 더 이상 스스로를 권위주의라고 부를 수 없습니다. 우리는 더 이상 프로이센식 입헌군주정이 아닙니다. 우리는 명목상의 왕만 있는 완전한 민주주의 국가 입니다."
+lithuania.12.a:0 "좋아."
 
-lithuania.13.t:0 "The End of the Kingdom"
-lithuania.13.d:0 "As the declaration of the abolition of the position of King of Lithuania and the arrest of Karl Gero von Urach, former Mindaugas III, finalised, the entirety of Lithuania was now transformed into a much different state. The last bits of democracy have been swept away, the Seimas has been dissolved, and the Party of Lithuanian National Interests now reigns supreme. Augustinas Voldemaras has declared himself to be the Leader - Vadas - and put his Iron Wolf brigades to work. \n\nThe creation of the Lithuanian National Republic can now only be stopped by Germany, whose interests in Lithuania have now been sorely broken..."
-lithuania.13.a:0 "Lietuva lietuviams!"
+lithuania.13.t:0 "왕국의 종말"
+lithuania.13.d:0 "리투아니아 왕위 폐지와 민다우가스 3세가 칼 게로 폰 우라흐를 체포했다는 선언이 마무리되면서 리투아니아 전체가 이제 완전히 다른 상태로 변했습니다. 민주주의의 마지막 부분들이 휩쓸려가고, 세이마스는 해체되었으며, 리투아니아 국가이익당이 이제 최고 권위를 차지하고 있습니다. 아우구스티나스 볼데마라스는 자신을 리더인 바다스로 선언하고 강철늑대를 작업에 투입시켰습니다. 리투아니아 공화국 창설은 이제 리투아니아에 대한 관심이 심각하게 깨진 독일에 의해서만이 중단될 수 있습니다."
+lithuania.13.a:0 "리투아니아인을 위한 리투아니아!"
 
-lithuania.14.t:0 "Lithuania Declares Independence!"
-lithuania.14.d:0 "The dastardly Lithuanians have betrayed us! After the election of 1938, which was won by the national populist Party of Lithuanian National Interests, more commonly known as 'Speak Lithuanian', the puppet Kingdom was rapidly transformed into a radical nationalist republic, with Kazys Škirpa as the 'Vadas' - Leader. \n\nThe Lithuanians have already seized numerous Lithuanian companies and arrested important German representatives in their nation, even their former King Karl Gero von Urach, and declare that they will listen to no one. How should we respond?"
-lithuania.14.a:0 "We will crush them in the blink of an eye!"
-lithuania.14.b:0 "We have more important matters, leave them be. For now."
+lithuania.14.t:0 "리투아니아가 독립을 선언하다!"
+lithuania.14.d:0 "비겁한 리투아니아인들이 우리를 배신했습니다! 1938년 흔히 '발언하는 리투아니아인'으로 알려진, 리투아니아 국가 이익당이 승리한 후, 이 꼭두각시 왕국은 급진적인 민족주의 공화국으로 빠르게 탈바꿈했고, 카시스 슈키르파를 '바다스'의 리더로 임명했습니다. 리투아니아는 이미 수많은 기업을 압류하고 자신의 국가에서 중요한 독일 대표들, 심지어 전 국왕인 카를 게로 폰 우라흐조차 체포했으며 아무 말도 귀담아 듣지 않겠다고 선언했습니다. 우리는 어떻게 대응해야 합니까?"
+lithuania.14.a:0 "우리가 그들을 눈 깜짝할 사이에 짓밟아버릴 것이다!"
+lithuania.14.b:0 "우리에게는 더 중요한 문제가 있다. 지금 당장은."
 
-lithuania.15.t:0 "A Deputy For The Vadas?"
-lithuania.15.d:0 "Now that we are fully in control of the Lithuanian nation, we have to shape the government of the new National Republic into the most preferable for our patriotic goals. The Vadas, Kazys Škirpa, already has a bunch of possible candidates from the party, and he needs a second in command, the person who will keep ties between him and the cabinet of ministers. Which option should we pick?"
-lithuania.15.a:0 "Vladas Mironas, a Catholic priest, liked by the people."
-lithuania.15.b:0 "Petras Kubiliūnas, the head of the Iron Guard paramilitaries."
-lithuania.15.c:0 "Juozas Eretas, Škirpa's most loyal follower, will stay as the second in command."
+lithuania.15.t:0 "바다스의 대리인?"
+lithuania.15.d:0 "이제 우리가 리투아니아를 완전히 장악하고 있으므로, 우리는 새로운 공화국 정부를 우리의 애국적 목표를 위해 가장 바람직한 것으로 만들어야 합니다. 바다스, 카지스 슈키르파는 이미 당에서 많은 후보들을 확보했고, 그는 그 당과 장관 사이의 유대를 유지할 두 번째 지도자가 필요합니다. 어떤 옵션을 선택할까요?"
+lithuania.15.a:0 "로마 카톨릭 신부인 블라다스 미로나스는 사람들에게 사랑을 받았지."
+lithuania.15.b:0 "준군사조직 철위대의 수장, 페트라스 쿠빌리우나스."
+lithuania.15.c:0 "슈키르파의 가장 충성스러운 추종자인 조셉 에렛이 부사령관으로 남을 것이다."
 
-lithuania.16.t:0 "Peace with Lithuania?"
-lithuania.16.d:0 "It has become apparent that the Lithuanians will not be an easy nut to crack. Even though the countries of the Reichspakt surround them from all sides, their forces have been able to push back our advances and even captured Konigsberg, the capital of East Prussia. Perhaps we should let the Lithuanians go and keep our focus on other fronts instead."
-lithuania.16.a:0 "Offer them Memel in exchange for peace."
-lithuania.16.b:0 "It's just a temporary setback!"
+lithuania.16.t:0 "리투아니아와의 평화?"
+lithuania.16.d:0 "리투아니아인들이 다루기 쉽지 않다는 것은 명백해졌습니다. 비록 제국 조약의 국가들이 그들을 사방에서 포위하고 있지만, 그들의 군대는 우리의 진격을 저지할 수 있었고 심지어 동프로이센의 수도인 쾨니히스베르크도 점령할 수 있었습니다. 어쩌면 우리는 리투아니아인들을 내버려두고 대신 다른 방면에 집중해야 할지도 모릅니다."
+lithuania.16.a:0 "그들에게 평화를 대가로 메멜을 할양하라."
+lithuania.16.b:0 "그저 일시적인 차질일 뿐이다!"
 
-lithuania.17.t:0 "Germany Offers Peace"
-lithuania.17.d:0 "Our armed forces are victorious! The Germans, seeing that they will not be able to defeat us that easily, now offer peace! They even give us the chance to keep Klaipėda, the heart of Lithuania Minor, in the National Republic. Should we accept this peace proposal or keep pushing forward?"
-lithuania.17.a:0 "It's a deal."
-lithuania.17.b:0 "No, let's press for more!"
+lithuania.17.t:0 "독일이 평화를 제안하다"
+lithuania.17.d:0 "우리 군대가 승리하고 있습니다! 독일인들은 우리를 쉽게 이길 수 없다는 것을 알았고, 이제 평화를 제안하고 있습니다! 그들은 심지어 우리에게 작은 리투아니아의 심장부인 클라이페다를 국가 공화국으로 유지시킬 기회도 주었습니다. 우리는 이 평화제안을 받아들여야 할까요, 아니면 앞으로 나아가야 할까요?"
+lithuania.17.a:0 "이것으로 거래가 성립되었다."
+lithuania.17.b:0 "아니, 더 압박해보자!"
 
-lithuania.18.t:0 "The Lithuanians Accepted!"
-lithuania.18.d:0 "The Lithuanians have agreed to our proposal. A peace treaty has been signed between the two nations in captured Memel, and Memelland has now been returned to the Lithuanian side. the Reichspakt walks away in shame, and now Germany no longer has a land route to it's eastern puppets..."
-lithuania.18.a:0 "As soon as the armistice ends, we'll take it back."
+lithuania.18.t:0 "리투아니아가 승낙하다!"
+lithuania.18.d:0 "리투아니아가 우리의 제안에 동의했습니다. 두 국가 사이 점령된 메멜에서 평화조약이 체결되었고, 메멜란트는 리투아니아 측에 되돌려졌습니다. 제국 조약은 수치스럽게 걸어가고 있으며, 이제 독일은 더 이상 동부 꼭두각시 인형에게 가는 육로를 가지고 있지 않습니다..."
+lithuania.18.a:0 "휴전이 끝나는대로, 우리가 다시 받아갈 것이다."
 
-lithuania.19.t:0 "The Lithuanians Declined!"
-lithuania.19.d:0 "Peace negotiations have broken down! The Lithuanians perhaps got too confident, and now believe that they can push even beyond Konigsberg! While they are of course foolish to believe that they can take down the Kaiserreich itself, the fact that we now have one more long-term front to deal with is not good for our situation..."
-lithuania.19.a:0 "Time for a third Tanenberg, then."
+lithuania.19.t:0 "리투아니아가 거절하다!"
+lithuania.19.d:0 "평화협상이 결렬되었습니다! 리투아니아인들은 어쩌면 오만함에 빠져있을 수도 있고, 이제 그들은 쾨니히스베르크를 넘어설 수 있다고 믿고 있습니다! 물론 그들이 제국을 무너뜨릴 수 있다고 믿는 것은 어리석지만, 우리가 지금 다룰 장기적인 전선이 하나 더 있다는 사실은 우리의 상황에 좋지 않습니다."
+lithuania.19.a:0 "그렇다면, 새번째 타넨베르크군."
 
-lithuania.20.t:0 "Peace with Lithuania?"
-lithuania.20.d:0 "It has become apparent that the Lithuanians will not be an easy nut to crack. Even though the countries of the Reichspakt surround them from all sides, their forces have been able to push back our advances and even captured a large portion of our territory. Perhaps we should swallow the defeat and concede the lands they have taken."
-lithuania.20.a:0 "Offer Novogrudok in exchange for peace."
-lithuania.20.b:0 "It's just a temporary setback!"
+lithuania.20.t:0 "리투아니아와의 평화?"
+lithuania.20.d:0 "리투아니아인들은 다루기 쉽지 않다는 것은 명백해졌습니다. 비록 제국 조약의 국가들이 그들을 사방에서 포위하고 있지만, 그들의 군대는 우리의 진격을 저지할 수 있었고 심지어 우리 영토의 많은 부분을 점령했습니다. 어쩌면 우리는 패배를 인정하고 그들이 가져간 땅을 양보해야 할 것입니다."
+lithuania.20.a:0 "그들에게 평화를 대가로 나바흐루다크를 할양하라."
+lithuania.20.b:0 "그저 일시적인 차질일 뿐이다!"
 
-lithuania.21.t:0 "Belorussia Offers Peace"
-lithuania.21.d:0 "Our armed forces are victorious! The White Russians, seeing that they are losing against our might, now offer peace! They even give us the chance to keep Naugardukas, one of Lithuania's core territories hundreds of years ago. Should we accept this peace proposal or keep pushing forward?"
-lithuania.21.a:0 "It's a deal."
-lithuania.21.b:0 "We'll reunite the Grand Duchy! All of it!"
+lithuania.21.t:0 "벨로루시가 평화를 제안하다"
+lithuania.21.d:0 "우리 군대가 승리하고 있습니다! 우리의 힘에 대항해봤지만 패배하고 있는 것을 본 벨로루시인들은 이제 평화를 제안하고 있습니다! 그들은 심지어 우리에게 수백년 전 리투아니아의 핵심 영토 중 하나였던 나우가르두카스를 가져갈 기회를 주고 있습니다. 우리는 이 평화제안을 받아들여야 할까요, 아니면 앞으로 나아가야 할까요?"
+lithuania.21.a:0 "이것으로 거래가 성립되었다."
+lithuania.21.b:0 "우린 대공국을 재통합할 것이다! 전부 다!"
 
-lithuania.22.t:0 "The Lithuanians Accepted!"
-lithuania.22.d:0 "Peace negotiations have been finalised in Minsk, and our diplomats walk away in shame. Belorussia has been defeated, and Lithuania has annexed the territory of Novogrudok. The lands of the White Rus' shrink even more, and the strength of our nation is being sapped away, bit by bit. But at least peace has returned to our lands."
-lithuania.22.a:0 "At least we still have Minsk..."
+lithuania.22.t:0 "리투아니아가 승낙하다!"
+lithuania.22.d:0 "민스크에서 평화협상이 마무리되었고 외교관들은 수치스럽게 떠나고 있습니다. 벨로루시가 패배하고 리투아니아가 나바흐루다크를 합병했습니다. 벨로루시인의 땅은 더욱 줄어들었고 우리나라의 힘은 조금씩 사라지고 있습니다. 그러나 적어도 평화는 우리 땅으로 돌아왔습니다."
+lithuania.22.a:0 "적어도 우린 아직 민스크를 가지고 있다..."
 
-lithuania.23.t:0 "The Lithuanians Declined!"
-lithuania.23.d:0 "The Lithuanians have gotten confident and believe that Novogrudok is not enough! In their point of view, the armies of the National Republic can conquer the entire Belorussia, despite their small size!"
-lithuania.23.a:0 "We will never surrender!"
+lithuania.23.t:0 "리투아니아가 거절하다!"
+lithuania.23.d:0 "리투아니아인들은 자신감을 얻었고 나바흐루다크로 충분하지 않다고 믿고 있습니다! 그들의 관점에서는, 공화국 군대의 작은 크기에도 불구하고 벨로루시 전체를 정복할 수 있습니다."
+lithuania.23.a:0 "우리는 절대 항복하지 않을 것이다!"
 
-lithuania.24.t:0 "Lithuania Proposes Baltic Unification"
-lithuania.24.d:0 "The recently elected Lithuanian government has stayed fiercely loyal to the Reichspakt, and now, they propose a deal we never even considered before - the unification of all three Baltic nations under the United Baltic banner. \n\nTo the Lithuanians, the Latvians and Estonians are their brothers, and even though we Germans still rule over them, they see a united Baltic state as superior to, say, Russian tyranny. How should we respond?"
-lithuania.24.a:0 "Ask the Kaiser to allow us to unify."
-lithuania.24.b:0 "The Lithuanians are not our concern."
+lithuania.24.t:0 "리투아니아가 발트 통합을 제안하다"
+lithuania.24.d:0 "최근에 선출된 리투아니아 정부는 제국 조약에게 맹목적 충성심을 유지해왔고, 이제 그들은 우리가 이전에는 한번도 생각해보지 못했던 협약을 제안하고 있습니다. 바로 발트해에 있는 세 발트 국가 모두의 발트 연합의 깃발 아래에서의 통일입니다. 리투아니아인들에게 라트비아인들과 에스토니아인들은 그들의 형제입니다. 그리고 비록 독일인들이 여전히 그들을 지배하고 있지만, 그들은 발트 연합을 러시아의 폭정보다는 우월하다 보고 있습니다. 우리는 어떻게 반응해야 할까요?"
+lithuania.24.a:0 "황제에게 우리가 통일할 수 있도록 해달라고 요청하자."
+lithuania.24.b:0 "리투아니아인들은 우리의 관심사가 아니다."
 
-lithuania.25.t:0 "The Baltic Duchy Declined"
-lithuania.25.d:0 "The German government of the Baltic Duchy has declined our generous offer of Baltic unification. According to them, we'd just be a problem and a chore for their administrative apparatus, so they have decided to distance themselves from us."
-lithuania.25.a:0 "Disappointing."
+lithuania.25.t:0 "발트 연합 공국이 거절하다"
+lithuania.25.d:0 "발트 연합 공국의 독일 정부는 발트 통합에 대한 우리의 관대한 제안을 거절했습니다. 그들의 말에 따르면, 우리는 단지 그들의 행정 기구들의 문제이고 성가신 일이기 때문에 우리와 거리를 두기로 결정했다고 합니다."
+lithuania.25.a:0 "실망스럽군."
 
-lithuania.26.t:0 "Balts Request Unification"
-lithuania.26.d:0 "Envoys from the United Baltic Duchy and Lithuania have arrived in Berlin today. They ask the Kaiser to give his opinion on their proposal of the unification of the two states into a single entity. Apparently, it was Lithuania who initiated the talks - they sure are loyal to our cause! But perhaps empowering the United Baltic Duchy will be problematic in the long term?"
-lithuania.26.a:0 "Give Adolf Friedrich the green light."
-lithuania.26.b:0 "No, we must not make the UBD too strong."
+lithuania.26.t:0 "발트 통합 요청"
+lithuania.26.d:0 "오늘 베를린에는 발트 연합 공국과 리투아니아에서 온 사절들이 도착했습니다. 그들은 황제에게 두 국가를 하나의 단일 개체로 만들자는 제안에 대해 의견을 표명했습니다. 분명히, 그 회담을 시작한 쪽은 리투아니아인 것 같습니다. 그들은 확실히 우리의 대의에 충실하고 있습니다! 하지만 아마도 발트 연합 공국에게 권한을 부여하는 것은 장기적으로 문제가 될 것입니다."
+lithuania.26.a:0 "아돌프 프리드리히에게 업무를 승인하라."
+lithuania.26.b:0 "아니, 우리는 UBD를 너무 강하게 만들어서는 안된다."
 
-lithuania.27.t:0 "Germany Accepted Baltic Unification!"
-lithuania.27.d:0 "Cheers! The Kaiser has given us the green light for the annexation of Lithuania, and now, the process of unification can proceed! Thousands of people have took it to the streets to cheer for the newly created nation of all Balts!"
-lithuania.27.a:0 "A new page in our history!"
+lithuania.27.t:0 "독일이 발트 통일을 승낙하다!"
+lithuania.27.d:0 "건배! 황제는 우리에게 리투아니아 합병을 승인해주었습니다. 그리고 이제, 통일 과정을 진행할 수 있습니다! 수천명의 사람들이 새로 탄생한 발트 국가를 응원하기 위해 거리로 나왔습니다!"
+lithuania.27.a:0 "우리 역사의 새로운 페이지다!"
 
-lithuania.28.t:0 "Germany Refused Baltic Unification!"
-lithuania.28.d:0 "Even though both the United Baltic Duchy and Lithuania were in favour of the proposal to unite the two states into one, the Kaiser has said his final word on the matter - and it was no. There will be no Baltic unification. At least not within our lifetimes."
-lithuania.28.a:0 "Sad!"
+lithuania.28.t:0 "독일이 발트 통일을 거절하다!
+lithuania.28.d:0 "발트 연합 공국과 리투아니아는 양국을 하나로 통합하자는 제안에 찬성했지만 황제는 그 문제에 대한 그의 마지막 발언을 했고 그것은 승낙이 아니었습니다. 발트 통일은 없을 것입니다. 적어도 우리 생애 내에 말입니다."
+lithuania.28.a:0 "슬프군!"
 
-lithuania.29.t:0 "A Dark Omen"
-lithuania.29.d:0 "Vyacheslav Vladimirovich was a simple man. Even though his family comes from Russian colonists who arrived here in the late 19th century, he considers himself to be a Lithuanian, even if he speaks Russian and pledges loyalty to Russia. But times have changed. Our new government is openly against Slavs, be it Russians, Poles and Belarusians, and the Iron Wolf brigades have already attacked his peaceful home on the outskirts of Vilnius. Despite loving his homeland, Vyacheslav was forced to emigrate, leave the nation and settle in Dvinsk. Yet another fleeing soul. \n\nWhile some people like Vyacheslav protested the new government with their feet, others are taking a far more active stance. Russian, Polish and Belorussian minorities are openly protesting the Vadas's government, urging for action against discrimination. They might be organising into a movement, despite our fierce opposition to that..."
-lithuania.29.a:0 "Lithuania is for Lithuanians!"
+lithuania.29.t:0 "어두운 징조"
+lithuania.29.d:0 "뱌체슬라프 블라디미로비치는 단순한 사람이었습니다. 비록 그의 가족은 19세기 말에 이곳에 도착한 러시아 식민지 주민들로부터 태어났지만, 그는 그가 러시아어를 말하고 러시아에 충성할 것을 약속하더라도, 자신을 리투아니아인이라고 생각하고 있습니다. 하지만 시대가 변했습니다. 강철늑대는 이미 빌뉴스 외곽에 있는 그의 평화로운 집을 공격했습니다. 그가 조국을 사랑함에도 불구하고, 뱌체슬라프는 이주하여 국가를 떠나 드빈스크에 정착할 수 밖에 없었습니다. 또 다른 도망치는 영혼이죠. 뱌체슬라프같은 일부 사람들은 새 정부에 자신들의 발을 들여놓고 항의했지만, 다른 사람들은 훨씬 더 적극적인 자세를 취하고 있습니다. 러시아, 폴란드, 벨로루시 소수민족들은 차별에 대한 조치를 촉구하며 공개적으로 바다스 정부에 항의하고 있습니다. 그 일에 대한 우리의 격렬한 반대에도 불구하고, 그들은 아마 운동을 조직하고 있을지도 모릅니다."
+lithuania.29.a:0 "리투아니아는 리투아니아인들을 위한 국가다!"
 
 lithuania.30.t:0 "The Alliance for Liberation"
 lithuania.30.d:0 "Representatives from Russian, Polish and Belorussian minorities, as well as many Lithuanian opposition politicians, have organised an underground assembly of the so-called 'Alliance for Liberation', a movement directed against our rule, calling for a fair treatment of the Slavic minorities. The STT has enough proof, however, that this is merely a lie, and the organisation is planning an armed pro-Russian rebellion against the state. The Alliance is unorganised and lacks a leader, but that might change soon."
