--- a/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
@@ -370,7 +370,7 @@ annex.108.b:0 "이집트-수단을 해방하라!"
 annex.108.c:0 "이집트와 수단을 해방하라!"
 annex.108.e:0 "수단을 해방하고 이집트를 점령해라!"
 annex.109.t:0 "페르시아 합병"
-annex.109.d:0 "After a long fight with the Persians, we have launched a full offensive and forced the Persian Army to surrender. Tehran is now in our hands!"
+annex.109.d:0 "After a long fight with the Persians, we have launched a full offensive and forced the Persian Army to surrender. [266.GetName] is now in our hands!"
 annex.109.a:0 "군사점령을 계속하라!"
 annex.109.b:0 "페르시아를 해방하라!"
 annex.109.c:0 "쿠르디스탄을 분리하고 페르시아를 해방하라!"
@@ -409,7 +409,7 @@ annex.116.b:0 "아프가니스탄을 해방하라!"
 annex.117.t:0 "쿠바 합병"
 annex.117.d:0 "We have taken control over Cuba and secured American hegemony throughout the Caribbean. What should we do with the 'liberated' island?"
 annex.117.a:0 "우호적인 쿠바로 해방하라!"
-annex.117.b:0 "...그리고 관타나모를 반환하라"
+annex.117.b:0 "...그리고 관타나모를 주어라."
 annex.117.c:0 "군사점령을 유지한다."
 annex.118.t:0 "시암 합병"
 annex.118.d:0 "We have taken control over the Thai state and secured our dominance on the upper part of the Malay Peninsular. Now the pressing issue for our government is figuring out what we should do with the newly 'liberated' Thai provinces."
@@ -523,9 +523,11 @@ annex.139.d:0 "베네수엘라 전역에 걸친 작전 끝에, 우린 마침내 
 annex.139.a:0 "베네수엘라에 친선 정부를 세우고 해방하라!"
 annex.139.b:0 "군사점령을 계속해라!"
 annex.140.t:0 "서인도 제도의 운명"
-annex.140.d:0 "카리브해 전역에 걸친 작전 끝에, 우린 마침내 서인도 연방의 방어를 무너트렸습니다. 서부 가이아나는 이제 우리 손 안에 있습니다! 우리는 이제 서인도 연방의 미래를 결정해야 합니다."
+annex.140.d:0 "카리브해 전역에 걸친 작전 끝에, 우린 마침내 서인도제도 연방의 방어를 무너트렸습니다. 서부 가이아나는 이제 우리 손 안에 있습니다! 우리는 이제 서인도제도 연방의 미래를 결정해야 합니다."
 annex.140.a:0 "서인도 제도에 친선 정부를 세우고 해방하라!"
 annex.140.b:0 "군사점령을 계속해라"
+annex.140.c:0 "연방을 재결성한다."
+annex.140.e:0 "연방결성은 실패한 계획이었다. 캐나다의 행정구역으로 두어라."
 annex.141.t:0 "파나마의 운명"
 annex.141.d:0 "파나마 운하에서의 짧은 작전 끝에, 우리는 마침내 파나마의 방어를 무너트렸습니다. 파나마 시티는 이제 우리 손 안에 있습니다! 우리는 이제 파나마의 미래를 결정해야 합니다."
 annex.141.a:0 "파나마에 친선 정부를 세우고 해방하라!"
@@ -543,7 +545,7 @@ annex.143.b:0 "군사점령을 계속해라!"
 annex.144.t:0 "쿠바의 운명"
 annex.144.d:0 "쿠바 섬에서의 짧은 작전 끝에, 우린 마침내 쿠바의 방어를 무너트렸습니다. 하바나는 이제 우리 손 안에 있습니다! 우리는 이제 쿠바의 미래를 결정해야 합니다."
 annex.144.a:0 "쿠바에 친선 정부를 세우고 해방하라"
-annex.144.b:0 "...그리고 관타나모를 반환하라"
+annex.144.b:0 "...그리고 관타나모를 주어라"
 annex.144.c:0 "군사점령을 계속해라!"
 annex.145.t:0 "멕시코의 운명"
 annex.145.d:0 "멕시코에서의 긴 작전 끝에, 우린 마침내 멕시코의 방어를 무너트렸습니다. 멕시코 시티는 이제 우리 손 안에 있습니다! 우리는 이제 멕시코의 미래를 결정해야 합니다."
@@ -557,9 +559,9 @@ annex.146.a:0 "갈리치아에 친선정부를 설립하고 해방하라"
 annex.146.b:0 "폴란드 친구들에게 주어라"
 annex.146.c:0 "우크라이나 친구들에게 주어라"
 annex.146.e:0 "군사점령을 계속해라!"
-annex.147.t:0 "벨로루시의 운명"
-annex.147.d:0 "벨라루스에서의 짧은 작전 끝에, 우린 마침내 벨라루스의 방어를 무너트렸습니다. 민스크는 이제 우리 손 안에 있습니다! 우리는 이제 그들의 미래를 결정해야 합니다."
-annex.147.a:0 "벨로루시에 친선정부를 설립해라!"
+annex.147.t:0 "백루테니아의 운명"
+annex.147.d:0 "백루테니아에서의 짧은 작전 끝에, 우린 마침내 백루테니아의 방어를 무너트렸습니다. 멘스크는 이제 우리 손 안에 있습니다! 우리는 이제 그들의 미래를 결정해야 합니다."
+annex.147.a:0 "백루테니아에 친선정부를 설립해라!"
 annex.147.b:0 "러시아 친구들에게 주어라"
 annex.147.c:0 "우리 영향권에 재편입시켜라!"
 annex.147.e:0 "군사점령을 계속해라!"
@@ -586,7 +588,6 @@ annex.153.t:0 "이탈리아의 운명"
 annex.153.d:0 "We now have to decide what to do with Italy. We can't control those territories forever and we might have to think about creating a puppet Italian state."
 annex.153.a:0 "이탈리아 공화국을 해방하라"
 annex.153.b:0 "이탈리아 사회주의 공화국을 해방하라"
-annex.153.c:0 "Balkanise Italy and make the royal house come back to Piedmont"
 annex.153.c:0 "이탈리아를 발칸화 시키고 왕실이 피에몬테에 돌아오게 하라"
 annex.153.e:0 "이탈리아 공화국과 교황령을 해방하라"
 annex.153.f:0 "이탈리아 공화국과 교황령, 양시칠리아를 해방하라"
@@ -672,30 +673,30 @@ annex.167.a:0 "충성스러운 모로코를 해방하라"
 annex.168.t:0 "돈-쿠반 연합의 운명"
 annex.168.d:0 "After a short campaign across the Kuban plains, the Don Kuban Union finally capitulated, leaving us with the control of their country. We must now decide what to do with it."
 annex.168.a:0 "충성스러운 돈-쿠반 연합을 해방하라"
-annex.168.b:0 "Give them to our Russian friend"
+annex.168.b:0 "우리의 러시아 친구들에게 주어라"
 annex.169.t:0 "네팔의 운명"
 annex.169.d:0 "히말라야에서의 성공적인 작전 끝에, 우리는 카트만두에 평화를 되찾기 위해 지역 행정권을 새로하는 과제를 안게 되었습니다. 어떻게 할까요?"
 annex.169.a:0 "네팔을 해방하라"
-annex.169.b:0 "Give the occupied territories to India and release the rest of Nepal"
-annex.169.c:0 "Give the occupied territories to the Bharatiyan Commune and release the rest of Nepal"
+annex.169.b:0 "점령한 지역을 인도에게 주고 나머지 지역은 네팔으로 해방시켜라"
+annex.169.c:0 "점령한 지역을 바라티야 코뮌에게 주고 나머지 지역은 네팔으로 해방시켜라"
 annex.170.t:0 "인도차이나의 운명"
 annex.170.d:0 "We are now in control of the wild regions of Indochina and we have to decide what to do with all of these different peoples."
 annex.170.a:0 "통일 인도차이나를 해방하라"
 annex.170.b:0 "베트남, 라오스, 캄보디아를 해방하라"
 annex.170.c:0 "독일령 동아시아에게 인도차이나를 넘겨주어라"
-annex.171.t:0 "안달루시아의 운명"
+annex.171.t:0 "오스트랄라시아의 운명"
 annex.171.d:0 "After a hard campaign throughout the isolated islands of the Australasian confederation our armies finally reached Camberra and with the capitulation of Australasia we must decide how we want to manage it."
-annex.171.a:0 "Liberate an united Australasian confederation"
+annex.171.a:0 "통일된 오스트랄라시아 연합을 해방시켜라"
 annex.171.b:0 "오스트레일리아와 뉴질랜드를 해방하라"
 annex.172.t:0 "스페인령 모로코의 운명"
-annex.172.d:0 "We now control the Spanish parts of Morocco, should we give it to our Moroccan puppet or keep it for ourselves?"
-annex.172.a:0 "Transfer it to our Moroccan puppet"
-annex.172.b:0 "Transfer it to our Spanish puppet"
+annex.172.d:0 "모로코의 스페인 점령지역을 통제하게 되었습니다. 이 지역을 우리의 괴뢰국인 모로코에게 주어야할까요 아니면 독단적인 결단을 내려야할까요?"
+annex.172.a:0 "우리의 괴뢰국인 모로코에게 주어라"
+annex.172.b:0 "우리의 괴뢰국인 스페인에게 주어라"
 annex.173.t:0 "독일령 소말릴랜드의 운명"
 annex.173.d:0 "We now control German Somaliland but we have a puppet close that might be better off handling the territory, should we give it to them?"
 annex.173.a:0 "Transfer it to our Somalian puppet"
 annex.173.b:0 "Transfer it to our Ethiopian puppet"
-annex.174.t:0 "독일령 아덴의 운명"
+annex.174.t:0 "아덴의 운명"
 annex.174.d:0 "We now control Aden but we have a puppet close that might be better off handling the territory, should we give it to them?"
 annex.174.a:0 "Transfer it to our Yemeni puppet"
 annex.176.t:0 "북서부 중국의 운명"
@@ -1001,25 +1002,25 @@ annex.248.b:0 "우리의 터키 친구들에게 주어라"
 annex.248.c:0 "우리의 [PER.GetAdjective] 친구들에게 주어라"
 annex.249.t:0 "캄보디아의 운명"
 annex.249.d:0 "Our armies have taken control of Phnom Penh, and the local Cambodians are clamoring for self-government. We should decide what's to be done with the region."
-annex.249.a:0 "Set up a puppet Cambodian state"
-annex.249.b:0 "Continue the occupation"
+annex.249.a:0 "캄보디아 괴뢰국을 수립한다"
+annex.249.b:0 "점령을 계속한다"
 annex.250.d:0 "Our armies have taken control of Laos, and the locals are clamoring for self-government. We should decide what's to be done with the region."
-annex.250.a:0 "Set up a puppet Laoatian state"
+annex.250.a:0 "라오스 괴뢰국을 수립한다"
 annex.251.d:0 "Our armies have taken control of Annam, and the local Vietnamese are clamoring for self-government. We should decide what's to be done with the region."
-annex.251.a:0 "Set up a puppet Vietnamese state"
-annex.252.t:0 "The Fate of Honduras"
+annex.251.a:0 "베트남 괴뢰국을 수립한다"
+annex.252.t:0 "온두라스의 운명"
 annex.252.d:0 "Our armies have put down the Honduran government and are patrolling the capital in Tegucigalpa. Which sort of government should be put in place instead?"
 annex.252.a:0 "Restore a loyal Honduran state"
 annex.252.b:0 "Occupy the country!"
-annex.253.t:0 "The Fate of Nicaragua"
+annex.253.t:0 "니카과라의 운명"
 annex.253.d:0 "With Managua in our hands, we now control Nicaragua and are able to decide what do with these lands."
 annex.253.a:0 "Restore a loyal Nicaraguan state"
 annex.253.b:0 "Occupy the country!"
-annex.254.t:0 "The Fate of Costa Rica"
+annex.254.t:0 "코스타리카의 운명"
 annex.254.d:0 "Our glorious army corps marched through the Rich Coast and now occupy the capital of the former Costa Rican government. We, however, can't have this situation last so long, what should we do with the land?"
 annex.254.a:0 "Restore a loyal Costa Rican state"
 annex.254.b:0 "Occupy the country!"
-annex.255.t:0 "The Fate of Central America"
+annex.255.t:0 "중앙아메리카의 운명"
 annex.255.d:0 "We have conquered all of Central America, and it might be better to unite all of Central America under one nation.\nWe could also release every nation seperately to keep them under control.\nOfcourse, we can always just keep it ourselves!"
 annex.255.a:0 "Liberate a loyal Central America!"
 annex.255.b:0 "Let each region be independant, as our puppet!"
@@ -1033,11 +1034,24 @@ annex.257.t:0 "Unite Costa Rica with Central America"
 annex.257.d:0 "Having Central America as a puppet, it makes little sense to keep Costa Rica seperated from them!\nWe can grant them the provinces, or keep them for ourselves."
 annex.257.a:0 "All Costa-Rican land belongs to Central America!"
 annex.257.b:0 "It is better kept under our rule!"
-annex.258.t:0 "The Fate of Eritrea"
+annex.258.t:0 "에리트레아의 운명"
 annex.258.d:0 "After our successful campaign in Eritrea we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
-annex.258.a:0 "Release Eritrea under a friendly government!"
-annex.258.b:0 "Return it to our friend Ethiopia"
-annex.258.c:0 "Continue with miltiary occupation!"
+annex.258.a:0 "에리트레아에 친선정부를 수립한다!"
+annex.258.b:0 "우리의 에티오피아 친구들에게 주어라"
+annex.258.c:0 "군사점령을 유지한다!"
+annex.259.t:0 "케라페리아의 운명"
+annex.259.d:0 "케라페리아 지역은 불가리아와 그리스 양측에서 영유권 주장을 하고 있습니다. 어떻게 해야할까요?"
+annex.259.a:0 "불가리아에게 주어라."
+annex.259.b:0 "그리스에게 주어라."
+annex.260.t:0 "니슈의 운명"
+annex.260.d:0 "니슈 지역은 불가리아와 세르비아 양측에서 영유권 주장을 하고 있습니다. 어떻게 해야할까요?"
+annex.260.a:0 "불가리아에게 주어라."
+annex.260.b:0 "세르비아에게 주어라."
+annex.261.t:0 "내몽골의 운명"
+annex.261.d:0 "Inner Mongolia, with its diverse population of Han and Mongols alike is claimed by both Mongolia and the various Chinese factions. What should be done with it?"
+annex.261.a:0 "우리의 동맹인 중국에게 주어라."
+annex.261.b:0 "우리의 동맹인 몽골에게 주어라."
+annex.261.c:0 "점령하라."
 
 ### Opinion Modifiers ###
 refused_prince:0 "군주 거부"
@@ -1047,5 +1061,4 @@ forced_king:0 "왕을 받아들임"
 
 ### World Tension ###
 returned_lands:0 "반환된 영토"
-catholic_takeover:0 "카톨릭 탈취"
-
+catholic_takeover:0 "카톨릭 축출"
