--- a/Kaiserreich Korean Translation/localisation/KR_Bahia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Bahia_l_english.yml
@@ -2,109 +2,109 @@ l_english:
 
 ### Parties ###
 BAH_social_democrat_party:0 "PSD"
-BAH_social_democrat_party_long:0 "Partido Social Democrata"
+BAH_social_democrat_party_long:0 "사회 민주당"
 BAH_social_conservative_party:0 "PRB"
-BAH_social_conservative_party_long:0 "Partido Republicano Baiano"
+BAH_social_conservative_party_long:0 "바이아 공화당"
 BAH_authoritarian_democrat_party:0 "PP"
-BAH_authoritarian_democrat_party_long:0 "Partido Parlamentarista"
+BAH_authoritarian_democrat_party_long:0 "국가 의회당"
 BAH_paternal_autocrat_party:0 "PC"
-BAH_paternal_autocrat_party_long:0 "Partido Centralista"
+BAH_paternal_autocrat_party_long:0 "중앙 집권당"
 BAH_national_populist_party:0 "PS"
-BAH_national_populist_party_long:0 "Partido Sabino"
+BAH_national_populist_party_long:0 "사비노당"
 BAH_social_liberal_party:0 "PDB"
-BAH_social_liberal_party_long:0 "Partido Democrata Baiano"
+BAH_social_liberal_party_long:0 "바이아 민주당"
 BAH_market_liberal_party:0 "PLDB"
-BAH_market_liberal_party_long:0 "Patido Liberal Democrata Baiano"
+BAH_market_liberal_party_long:0 "바이아 자민당"
 BAH_radical_socialist_party:0 "FAB"
-BAH_radical_socialist_party_long:0 "Federação Anarquista Baiana"
+BAH_radical_socialist_party_long:0 "바이아 아나키스트 연맹"
 BAH_syndicalist_party:0 "PSB"
-BAH_syndicalist_party_long:0 "Partido Socialista Baiano"
+BAH_syndicalist_party_long:0 "바이아 사회당"
 BAH_totalist_party:0 "PMB"
-BAH_totalist_party_long:0 "Partido Maximalista Baiano"
+BAH_totalist_party_long:0 "바이아 혁명당"
 
 
 ### Focuses ###
-BAH_nationbuilding:0 "Nation Building"
-BAH_nationbuilding_desc:0 "We will spare no effort in rebuilding Bahia to the nation it deserves to be, Free and Proud!"
-BAH_expell_cairoca_farmers:0 "Expel Southron Farmers"
-BAH_expell_cairoca_farmers_desc:0 "Brazilian landsharks devoured our farmers, and we must work recover the economy from such a blow"
-BAH_infrastructurerenewal:0 "Infrastructure Renewal"
-BAH_infrastructurerenewal_desc:0 "War has torn our lands, and railroads everywhere are death-traps, sabotaged and ill taken care of. We must change that"
-BAH_navalconstructioneffort:0 "Naval Construction Effort"
-BAH_navalconstructioneffort_desc:0 "If we are to establish a fleet, we will need better facilities than those we currently have in Montevideo"
-BAH_rearmament:0 "Rearmament Focus"
-BAH_rearmament_desc:0 "We will use new factories to help our rising military equip itself"
-BAH_confiscate_br_property:0 "Confiscate Brazilian Factories"
-BAH_confiscate_br_property_desc:0 "Brazilian individuals and companies still own sensitive assets, we will change that to ensure our sovereignty"
-BAH_defenseprojects:0 "Defensive Projects"
-BAH_defenseprojects_desc:0 "Special laws to incentivise strategic industries will be put in place to safeguard our self determination"
-BAH_renewconstiution:0 "Renew the Constitution"
-BAH_renewconstiution_desc:0 "We will renew the Old Constitution, reaffirming our commitment to our sovereignty while reminding our citizens that Brazilian government was nothing but a military occupation"
-BAH_newrightsandresponsabilities:0 "New Rights and Responsibilities"
-BAH_newrightsandresponsabilities_desc:0 "Freedom isn't Free; Every man must be ready to do his part to safeguard our nation"
-BAH_heavyinvestment:0 "Heavy Industry Investment"
-BAH_heavyinvestment_desc:0 "We will need much more incentives if our industry is to truly thrive"
-BAH_fundodedefesadapatria:0 "Fundo De Defensa da Patria"
-BAH_fundodedefesadapatria_desc:0 "Fundo De Defensa da Patria"
-BAH_ladnreform:0 "Enact Land Reform"
-BAH_ladnreform_desc:0 "We have a golden opportunity now to do a sweeping land reform"
-BAH_horsemen:0 "A Legacy of Cavalrymen"
+BAH_nationbuilding:0 "국가 건설"
+BAH_nationbuilding_desc:0 "우리는 바이아를 자유롭고 자랑스러운 국가로 재건하는데 어떠한 노력도 아끼지 않을 것입니다!"
+BAH_expell_cairoca_farmers:0 "남부의 농부들을 쫒아내다"
+BAH_expell_cairoca_farmers_desc:0 "브라질인 투기꾼들이 우리 농부들을 집어삼켰고, 우리는 그러한 타격으로부터 경제를 회복시키기 위해 노력해야 합니다."
+BAH_infrastructurerenewal:0 "기반시설 재개발"
+BAH_infrastructurerenewal_desc:0 "전쟁은 우리의 땅을 찢어 놓았고, 곳곳의 철길은 죽음의 덫이며 사보타주되었고 잘못 관리되고있습니다. 우리는 그것을 바꿔야 합니다."
+BAH_navalconstructioneffort:0 "해군 시설 건설"
+BAH_navalconstructioneffort_desc:0 "함대를 창설하려면 현재 몬테비데오에 있는 해군 시설보다 더 좋은 시설이 필요할 것입니다."
+BAH_rearmament:0 "재무장에 집중"
+BAH_rearmament_desc:0 "우리는 군사 장비들을 갖추기 위해 새로운 공장을 사용할 것입니다."
+BAH_confiscate_br_property:0 "브라질 공장 몰수"
+BAH_confiscate_br_property_desc:0 "브라질 개개인과 회사는 여전히 민감한 자산을 소유하고 있습니다. 우리는 우리의 주권을 보장하기 위해 그것들을 바꿀 것입니다."
+BAH_defenseprojects:0 "방어 계획"
+BAH_defenseprojects_desc:0 "전략적 산업을 장려하는 특별법이 우리의 자결을 보호하기 위해 제정 될 것입니다."
+BAH_renewconstiution:0 "헌법 개정"
+BAH_renewconstiution_desc:0 "브라질 정부는 군사 점령에 불과했다는 점을 시민들에게 상기시키면서 주권에 대한 의지를 재확인하는 구헌법을 개정할것입니다."
+BAH_newrightsandresponsabilities:0 "새로운 권리와 책임"
+BAH_newrightsandresponsabilities_desc:0 "자유는 자유로운것이 아닙니다. 모든 사람은 나라를 지키기 위해 자신의 역할을 할 준비가 되어 있어야 합니다."
+BAH_heavyinvestment:0 "중공업 투자"
+BAH_heavyinvestment_desc:0 "우리 산업이 진정으로 번창하려면 훨씬 더 많은 장려책이 필요할 것입니다."
+BAH_fundodedefesadapatria:0 "국방 기금"
+BAH_fundodedefesadapatria_desc:0 "국방 기금(Fundo De Defensa da Patria)"
+BAH_ladnreform:0 "토지 개혁 법안"
+BAH_ladnreform_desc:0 "우리는 지금 대대적인 토지 개혁을 할 수 있는 절호의 기회를 얻었습니다."
+BAH_horsemen:0 "기병대의 유산"
 BAH_horsemen_desc:0 ""
-BAH_pecuaria:0 "Pecuniary Incentives"
-BAH_pecuaria_desc:0 "Our cattle industry is on the verge of an unprecedented boom. All it needs is a small push"
-BAH_goodtimes:0 "Economic Progress"
-BAH_goodtimes_desc:0 "Our excellent economic situation can still improve with some effort"
-BAH_bahian_army:0 "Bahian Armed Forces"
-BAH_bahian_army_desc:0 "Our armed forces must be rebuilt if we are not to be conquered again."
-BAH_inf:0 "Infantry Equipment Effort"
-BAH_inf_desc:0 "More up do date military equipment will be needed to arm our men than the Brazilian scraps we currently own"
-BAH_mobility:0 "Mobility Doctrines"
-BAH_mobility_desc:0 "In the plains of Bahia, it doesn't take an officer to realise how moving in a fast and efficient manner is the way forward to defend and attack"
-BAH_mechanization:0 "Mechanised Warfare"
-BAH_mechanization_desc:0 "Our armed forces will need armoured spearheads to properly wage war, and the tanks do those as well!"
-BAH_techslot:0 "Military Science Developments"
-BAH_techslot_desc:0 "We will ensure our army is not left behind in the race of military technology sweeping the globe as we speak"
-BAH_airbases:0 "Expanded Airbases"
-BAH_airbases_desc:0 "Our airfields will be expanded, to allow us and our allies to use them at the same time"
-BAH_fightereffort:0 "Defend the Skies"
-BAH_fightereffort_desc:0 "We must fend off any foreign attempts to attain air superiority over Bahia!"
-BAH_cas:0 "Close Air Support Effort"
-BAH_cas_desc:0 "We will ensure our airforce has close air support bomber craft at is disposal, and qualified pilots as well"
-BAH_todos_os_santos:0 "Bahian Navy"
-BAH_todos_os_santos_desc:0 "Rebuilding a navy from scratch is not easy feat, but we will tackle the challenge!"
-BAH_coastaldefenses:0 "Coastal Defences"
-BAH_coastaldefenses_desc:0 "We will ensure Bahia is safe from any naval incursions, with the building of coastal defences."
-BAH_specialforces:0 "Special Forces"
-BAH_specialforces_desc:0 "Special units will be trained to tackle difficult or hazardous terrain"
-BAH_barata_legion:0 "Barata Legion"
-BAH_barata_legion_desc:0 "The elite of the Elite, the Barata Legion will be the ultimate fighting force in South America. Or so the recruitment fliers say!"
-BAH_newindustries:0 "New Industries"
-BAH_newindustries_desc:0 "New Industries"
-BAH_enlist_ranchers:0 "Enlist Rancher Aid"
+BAH_pecuaria:0 "금전적인 장려책"
+BAH_pecuaria_desc:0 "우리의 목축업은 전대미문의 호황을 눈앞에 두고 있습니다. 우리가 해야할것은 약간의 지원입니다."
+BAH_goodtimes:0 "경제의 진보"
+BAH_goodtimes_desc:0 "우리의 훌륭한 경제 상황은 약간의 노력으로 더욱 성장할 수 있습니다."
+BAH_bahian_army:0 "바이아의 군대"
+BAH_bahian_army_desc:0 "우리가 다시 정복되지 않으려면 우리 군대는 재건되어야 합니다."
+BAH_inf:0 "보병 장비 지원"
+BAH_inf_desc:0 "우리 병사들을 무장시키기 위해 우리가 현재 소유하고 있는 브라질제 노획물보다 더 많은 양의 군사 장비가 필요할 것입니다."
+BAH_mobility:0 "기동전 교리"
+BAH_mobility_desc:0 "바이아 평야에서는, 장교가 어떻게 빠르고 효율적인 방식으로 움직이는 것이 공격과 방어를하기 위한 방법인지 깨달을 필요가 없습니다."
+BAH_mechanization:0 "기계화 전투"
+BAH_mechanization_desc:0 "우리 군대는 전쟁을 제대로 치르기 위해 기갑 장비가 필요할 것이고, 탱크가 예외는 아닐것입니다!"
+BAH_techslot:0 "군사 과학의 발전"
+BAH_techslot_desc:0 "우리는 정부가 말하는 것처럼 우리의 군대가 전 세계를 휩쓸고 있는 군사 기술의 경주에서 뒤쳐지지 않도록 보장할 것입니다."
+BAH_airbases:0 "공항 확장"
+BAH_airbases_desc:0 "비행장이 확장되어 우리와 동맹국들이 동시에 이용할 수 있게 될 것입니다."
+BAH_fightereffort:0 "상공을 수호하라"
+BAH_fightereffort_desc:0 "우리는 바이아 상공에 대한 어떠한 외세의 침략도 막아야 합니다!"
+BAH_cas:0 "근접지원 항공기 지원"
+BAH_cas_desc:0 "우리는 공군이 근접 지원 폭격기를 마음대로 조종할 수 있도록 보장하고, 자격을 갖춘 조종사들도 보유할 것다."
+BAH_todos_os_santos:0 "바이아 해군"
+BAH_todos_os_santos_desc:0 "처음부터 해군을 재건하는 것은 쉬운 일이 아니지만, 우리는 그 도전할것입니다!"
+BAH_coastaldefenses:0 "해안 방어"
+BAH_coastaldefenses_desc:0 "우리는 바이아에 해안 방어선을 구축하면서 어떠한 해군 공격으로부터도 안전하도록 보장할 것입니다."
+BAH_specialforces:0 "특수부대"
+BAH_specialforces_desc:0 "특수부대는 어렵고 위험한 지형을 다루도록 교육되었습니다."
+BAH_barata_legion:0 "바라타 군단"
+BAH_barata_legion_desc:0 "엘리트중에서도 으뜸인 바라타 군단은 남아메리카의 궁극적인 전투력이 될 것입니다... 라고 모병 포스터에서 말하는군요!"
+BAH_newindustries:0 "새로운 공장"
+BAH_newindustries_desc:0 "새로운 공장"
+BAH_enlist_ranchers:0 "목장주들에게 원조를 요청"
 BAH_enlist_ranchers_desc:0 ""
-BAH_sertanejo_terrain_mastery:0 "Mastery of the Sertão"
+BAH_sertanejo_terrain_mastery:0 "세르타오의 거장"
 BAH_sertanejo_terrain_mastery_desc:0 ""
-BAH_tank_heavy_arms:0 "Heavy Weapons Production"
+BAH_tank_heavy_arms:0 "중화기 제조"
 BAH_tank_heavy_arms_desc:0 ""
-BAH_trained_general_staff:0 "Trained General Staff"
+BAH_trained_general_staff:0 "훈련된 참모"
 BAH_trained_general_staff_desc:0 ""
-BAH_combat_famine:0 "Combat Famine"
+BAH_combat_famine:0 "기근과 싸우다"
 BAH_combat_famine_desc:0 ""
 
 ### Ideas ###
-BAHconsti:0 "Affirmed Constitution"
+BAHconsti:0 "확정된 헌법"
 BAHconsti_desc:0 ""
-BAHlandreform:0 "Land Reform"
+BAHlandreform:0 "토지 개혁"
 BAHlandreform_desc:0 ""
-BAHcav:0 "Army Of Ranchers"
+BAHcav:0 "목축업자 군대"
 BAHcav_desc:0 ""
-BAHpecuaria:0 "Subsidized Ranching"
+BAHpecuaria:0 "목축업 보조금 "
 BAHpecuaria_desc:0 ""
-BAHsuperduperpecuaria:0 "Ranching Boom"
+BAHsuperduperpecuaria:0 "목축업 붐"
 BAHsuperduperpecuaria_desc:0 ""
-BAHterrainmastery:0 "Terrain Mastery"
+BAHterrainmastery:0 "익숙한 지형"
 BAHterrainmastery_desc:0 ""
-BAHheavyprod:0 "Heavy Production"
+BAHheavyprod:0 "중공업 생산"
 BAHheavyprod_desc:0 ""
-BAHstaff:0 "Trained General Staff"
+BAHstaff:0 "훈련된 참모진"
 BAHstaff_desc:0 ""
